WT_ASSERT failure for update transactions

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The jstests/concurrency/fsm_workloads/findAndModify_update_grow.js test occasionally aborts because of a failed WT_ASSERT in __free_update_list in bt_discard.c:

      ----
      jstests/concurrency/fsm_workloads/findAndModify_update_grow.js
      ----
      
      [...]
      sweep-server: src\third_party\wiredtiger\src\btree\bt_discard.c, 418: F_ISSET(session, WT_SESSION_DISCARD_FORCE) || upd->txnid == WT_TXN_ABORTED || __wt_txn_visible_all(session, upd->txnid)
      
      2015-01-21T20:11:08.929+0000 I CONTROL  mongod.exe    ...\src\mongo\util\stacktrace_win.cpp(175)                   mongo::printStackTrace+0x43
      2015-01-21T20:11:08.929+0000 I CONTROL  mongod.exe    ...\src\mongo\util\signal_handlers_synchronous.cpp(127)      mongo::`anonymous namespace'::printSignalAndBacktrace+0x73
      2015-01-21T20:11:08.929+0000 I CONTROL  mongod.exe    ...\src\mongo\util\signal_handlers_synchronous.cpp(194)      mongo::`anonymous namespace'::abruptQuit+0x2e
      2015-01-21T20:11:08.929+0000 I CONTROL  mongod.exe    f:\dd\vctools\crt\crtw32\misc\winsig.c(594)                  raise+0x35f
      2015-01-21T20:11:08.929+0000 I CONTROL  mongod.exe    f:\dd\vctools\crt\crtw32\misc\abort.c(82)                    abort+0x40
      2015-01-21T20:11:08.929+0000 I CONTROL  mongod.exe    ...\src\third_party\wiredtiger\src\os_posix\os_abort.c(25)   __wt_abort+0x22
      2015-01-21T20:11:08.929+0000 I CONTROL  mongod.exe    ...\src\third_party\wiredtiger\src\support\err.c(451)        __wt_assert+0x37
      2015-01-21T20:11:08.929+0000 I CONTROL  mongod.exe    ...\src\third_party\wiredtiger\src\btree\bt_discard.c(397)   __free_update+0x94
      2015-01-21T20:11:08.929+0000 I CONTROL  mongod.exe    ...\src\third_party\wiredtiger\src\btree\bt_discard.c(338)   __free_page_row_leaf+0xaa
      2015-01-21T20:11:08.929+0000 I CONTROL  mongod.exe    ...\src\third_party\wiredtiger\src\btree\bt_discard.c(124)   __wt_page_out+0x292
      2015-01-21T20:11:08.929+0000 I CONTROL  mongod.exe    ...\src\third_party\wiredtiger\src\evict\evict_page.c(155)   __wt_rec_page_clean_update+0xe
      2015-01-21T20:11:08.929+0000 I CONTROL  mongod.exe    ...\src\third_party\wiredtiger\src\evict\evict_file.c(120)   __wt_evict_file+0x227
      2015-01-21T20:11:08.929+0000 I CONTROL  mongod.exe    ...\src\third_party\wiredtiger\src\btree\bt_sync.c(229)      __wt_cache_op+0x9d
      2015-01-21T20:11:08.929+0000 I CONTROL  mongod.exe    ...\src\third_party\wiredtiger\src\conn\conn_dhandle.c(276)  __wt_conn_btree_sync_and_close+0x7f
      2015-01-21T20:11:08.930+0000 I CONTROL  mongod.exe    ...\src\third_party\wiredtiger\src\conn\conn_sweep.c(127)    __sweep_server+0x163
      2015-01-21T20:11:08.930+0000 I CONTROL  kernel32.dll                                                               BaseThreadInitThunk+0xd
      2015-01-21T20:11:08.930+0000 F -        Got signal: 22 (SIGABRT)
      

            Assignee:
            Michael Cahill
            Reporter:
            Daniel Alabi (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: