If discarding a tree for sweep races with an update, give up the discard gracefully.

refs #1618, SERVER-17048